--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@rematch/core": "^1.2.0",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3"
