--- a/client/package.json
+++ b/client/package.json
@@ -41,8 +41,10 @@
   },
   "dependencies": {
     "@rematch/core": "^1.2.0",
+    "leaflet": "^1.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-leaflet": "^2.6.0",
     "react-redux": "^7.1.3"
   }
 }
