--- a/client/package.json
+++ b/client/package.json
@@ -43,10 +43,13 @@
     "@rematch/core": "^1.2.0",
     "classnames": "^2.2.6",
     "leaflet": "^1.6.0",
+    "leaflet.markercluster": "^1.4.1",
     "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.0",
+    "react-leaflet-markercluster": "^2.0.0-rc3",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2"
   }
