--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
+    "url-loader": "^3.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
@@ -54,6 +55,8 @@
     "react-leaflet": "^2.6.0",
     "react-leaflet-markercluster": "^2.0.0-rc3",
     "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-slick": "^0.25.2",
+    "slick-carousel": "^1.8.1"
   }
 }
